@@ -16,6 +16,7 @@ struct tScheduleItem
 	_eTimerType	timerType; 
 	_eTimerCommand timerCmd;
 	unsigned char Level;
+	bool bUseRandmoness;
 	int Days;
 	//internal
 	time_t startTime;
